config: Add proxy option to vsock when possible.
Add config option called `use_vsock` this will
check if vsock is supported and wont use a proxy.

Signed-off-by: Jose Carlos Venegas Munoz <jose.carlos.venegas.munoz@intel.com>

--- a/cli/config/configuration.toml.in
+++ b/cli/config/configuration.toml.in
@@ -140,6 +140,9 @@ path = "@PROXYPATH@"
 # If enabled, proxy messages will be sent to the system log
 # (default: disabled)
 #enable_debug = true
+# If enabled, in case of vsock support wont use a proxy
+# (default: disabled)
+#use_vsock = true
 
 [shim.@PROJECT_TYPE@]
 path = "@SHIMPATH@"
