config: Add proxy option to vsock when possible.
Add config option called `use_vsock` this will
check if vsock is supported and wont use a proxy.

Signed-off-by: Jose Carlos Venegas Munoz <jose.carlos.venegas.munoz@intel.com>

--- a/cli/config/configuration.toml.in
+++ b/cli/config/configuration.toml.in
@@ -134,6 +134,10 @@ enable_iothreads = @DEFENABLEIOTHREADS@
 # used for 9p packet payload.
 #msize_9p = @DEFMSIZE9P@
 
+# If enabled, in case of vsock support wont use a proxy
+# (default: disabled)
+#use_vsock = true
+
 [proxy.@PROJECT_TYPE@]
 path = "@PROXYPATH@"
 
