agent: client: revert changes
revert based in sebastien branch

Signed-off-by: Ubuntu <jcvenega@agentclientdebug.i4z2jhjwqexuzbx35dp0y142oc.xx.internal.cloudapp.net>

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -52,7 +52,8 @@
 
 [[constraint]]
   name = "github.com/kata-containers/agent"
-  revision = "1b3628c43660cb198ec055d78e5c7b03809cba60"
+  branch = "revert_ch"
+  source = "github.com/sboeuf/agent"
 
 [[constraint]]
   name = "github.com/containerd/cri-containerd"
