--- a/virtcontainers/pkg/cloud-hypervisor/cloud-hypervisor.yaml
+++ b/virtcontainers/pkg/cloud-hypervisor/cloud-hypervisor.yaml
@@ -295,6 +295,12 @@ components:
         iommu:
           type: boolean
           default: false
+        num_queues:
+          type: integer
+          default: 2
+        queue_size:
+          type: integer
+          default: 256
 
     RngConfig:
       required:
@@ -427,11 +433,10 @@ components:
           default: false
 
     VmResize:
-      required:
-      - desired_vcpus
       type: object
       properties:
         desired_vcpus:
           minimum: 1
-          default: 1
+          type: integer
+        desired_ram:
           type: integer
